--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,13 +7,23 @@
 
 body 
 {
-    background-color: white;
+    min-height: 500vh;
+    background: #eee;
+    margin: 0;
 }
 
-a 
+nav a
 {
-    color: white;
-    text-decoration: none;
+    float: right;
+    display: flex;
+    color: #80c9cb;
+    text-align: right;
+    padding: 14px 16px;
+    text-decoration: underline;
+    font-size: 17px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    letter-spacing: 2px;
+    position: relative
 }
 
 p 
@@ -23,24 +33,52 @@ p
 
 .header 
 {
+    display: flex;
+    justify-content: left;
+    position: fixed;
+    width: 100%;
+    align-items: right;
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color:grey;
-    color: dark grey;
+    background-color:#30343e;
+    color: #415a7b;
 }
 
-.header h1 h2 h3
+#main-image 
+{
+    height: 800px;
+    width: 100%;
+    margin-bottom: 25px;
+    background-image: url("..//images/pngtree-h5-web-design-sci-fi-background-banner-image_156041.png");
+    background-repeat: repeat-x;
+    background-size: cover;
+    background-position: center;
+
+}
+
+.h1
+{
+    padding: 60px;
+  text-align: center;
+  background: #1abc9c;
+  color: white;
+  font-size: 30px; 
+}
+.header h2 h3
 {
     display: inline-block;
     font-size: 48px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: darkslategrey
 }
 
-.header h1 h2 h3
-{
-    color: #d9dcd6;
+.vertical {
+    border-left: 6px solid black;
+    height: 200px;
+    position:absolute;
+    left: 50%;
 }
-
-.header nav 
+#header nav ul
 {
     padding-top: 15px;
     margin-right: 20px;
@@ -51,6 +89,7 @@ p
 
 .header nav ul 
 {
+    display:inline-block;
     list-style-type: none;
 }
 
@@ -58,6 +97,7 @@ p
 {
     display: inline-block;
     margin-left: 25px;
+    text-decoration: underline;
 }
 
 .main-image 
@@ -104,29 +144,10 @@ float: right;
     color: #ffffff;
 }
 
-#About-Me img,
-#Work img,
-#Contact-Me img
-{
-    max-height: 200px;
-}
-
-#About-Me h2, 
-#Work h2,
-#Contact-Me
+#About-Me h1 h2 h3, 
+#Work h1 h2 h3,
+#Contact-Me h1, h2, h3
 {
     margin-bottom: 20px;
     font-size: 36px;
-}
-.footer 
-{
-    padding: 30px;
-    clear: both;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    text-align: center;
-}
-
-.footer h2 
-{
-    font-size: 20px;
 }
