--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,153 +1,129 @@
-* 
-{
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
-body 
-{
-    min-height: 500vh;
-    background: #eee;
-    margin: 0;
+body {
+  min-height: 500vh;
+  background: #eee;
+  margin: 0;
 }
 
-nav a
-{
-    float: right;
-    display: flex;
-    color: #80c9cb;
-    text-align: right;
-    padding: 14px 16px;
-    text-decoration: underline;
-    font-size: 17px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    letter-spacing: 2px;
-    position: relative
+nav a {
+  float: right;
+  display: flex;
+  color: #80c9cb;
+  text-align: right;
+  padding: 14px 16px;
+  text-decoration: underline;
+  font-size: 17px;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  letter-spacing: 2px;
+  position: relative;
 }
 
-p 
-{
-    font-size: 16px;
+p {
+  font-size: 16px;
 }
 
-.header 
-{
-    display: flex;
-    justify-content: left;
-    position: fixed;
-    width: 100%;
-    align-items: right;
-    padding: 20px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color:#30343e;
-    color: #415a7b;
+.header {
+  display: flex;
+  justify-content: left;
+  position: fixed;
+  width: 100%;
+  align-items: right;
+  padding: 20px;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  background-color: #30343e;
+  color: #415a7b;
 }
 
-#main-image 
-{
-    height: 800px;
-    width: 100%;
-    margin-bottom: 25px;
-    background-image: url("..//images/pngtree-h5-web-design-sci-fi-background-banner-image_156041.png");
-    background-repeat: repeat-x;
-    background-size: cover;
-    background-position: center;
-
+.main-image {
+  height: 200px;
+  width: 100%;
+  margin-bottom: 25px;
+  background-image: url("../images/header-image.png");
+  background-repeat: repeat-x;
+  background-size: cover;
+  background-position: center;
 }
 
-.h1
-{
-    padding: 60px;
+.h1 {
+  padding: 60px;
   text-align: center;
   background: #1abc9c;
   color: white;
-  font-size: 30px; 
+  font-size: 30px;
 }
-.header h2 h3
-{
-    display: inline-block;
-    font-size: 48px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    color: darkslategrey
+.header h2 h3 {
+  display: inline-block;
+  font-size: 48px;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  color: darkslategrey;
 }
-
-.vertical {
-    border-left: 6px solid black;
-    height: 200px;
-    position:absolute;
-    left: 50%;
-}
-#header nav ul
-{
-    padding-top: 15px;
-    margin-right: 20px;
-    float: right;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 20px;
+#header nav ul {
+  padding-top: 15px;
+  margin-right: 20px;
+  float: right;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 20px;
 }
 
-.header nav ul 
-{
-    display:inline-block;
-    list-style-type: none;
+.header nav ul {
+  display: inline-block;
+  list-style-type: none;
 }
 
-.header nav ul li 
-{
-    display: inline-block;
-    margin-left: 25px;
-    text-decoration: underline;
+.header nav ul li {
+  display: inline-block;
+  margin-left: 25px;
+  text-decoration: underline;
 }
 
-.main-image 
-{
-    height: 200px;
-    width: 100%;
-    margin-bottom: 25px;
-    background-image: url("https://www.vecteezy.com/free-vector/banner");
-    background-size: cover;
-    background-position: center;
+.Subtitle {
+  float: right;
 }
-.Subtitle
-{
-float: right;
-}
-.main-content 
-{
-    width: 75%;
-    display: inline-block;
-    margin-left: 20px;
+.main-content {
+  width: 75%;
+  display: inline-block;
+  margin-left: 20px;
 }
 
-.float-left 
-{
-    float: left;
-    margin-right: 25px;
+.float-left {
+  float: left;
+  margin-right: 25px;
 }
 
-.float-right 
-{
-    float: right;
-    margin-left: 25px;
+.float-right {
+  float: right;
+  margin-left: 25px;
 }
-#About-Me, 
+#About-Me,
 #Work,
 #Contact-Me,
-#Resume
-{
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
+#Resume {
+  margin-bottom: 20px;
+  padding: 50px;
+  height: 300px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  background-color: #0072bb;
+  color: #ffffff;
 }
 
-#About-Me h1 h2 h3, 
+#About-Me h1 h2 h3,
 #Work h1 h2 h3,
-#Contact-Me h1, h2, h3
-{
-    margin-bottom: 20px;
-    font-size: 36px;
+#Contact-Me h1,
+h2,
+h3 {
+  margin-bottom: 20px;
+  font-size: 36px;
+}
+#Contact-Me ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
