--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+  
 * {
     box-sizing: border-box;
     padding: 0;
@@ -27,16 +28,7 @@
   p {
     font-size: 16px;
   }
-  h1#name
-  {
-    display: flex;
-    flex-wrap: wrap;
-    align-content: center;
-    background-color: #92cbcd;
-    width: 40%;
-    height: 100%;
-    padding-right: 1%;
-  }
+  
   .header {
     display: flex;
     justify-content: left;
@@ -45,18 +37,32 @@
     padding: 20px;
     font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
       "Lucida Sans", Arial, sans-serif;
-    background-color: #31343d;
+    background-color: #30343e;
     color: #415a7b;
   }
   
-  .main-image {
-    height: 200px;
-    width: 100%;
-    margin-bottom: 25px;
-    background-image: url("../images/header-image.png");
-    background-size: cover;
-    background-position: center;
+  .main-image 
+  {
+      position: relative;  
+      height: 200px;
+      width: 100%;
+      margin-bottom: 0px;
+      background-image: url("../images/header-image.png");
+      background-size: cover;
+      background-position: center;
   }
+  
+  .subtitle 
+  {
+      position: absolute;
+      bottom: 10px;
+      background-color: #80c9cb;
+      right: 20px;
+      width: 200px;
+      height: 100px;
+      border: none;
+      font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    }
   
   .h1 {
     padding: 60px;
@@ -91,43 +97,42 @@
     text-decoration: underline;
   }
   
-  .subtitle {
-    position: absolute;
-    top: 200px;
-    right: 50px;
-    width: 200px;
-    height: 40px;
-    border: none;
-    background-color:#92ccce;
-    text-align: center;
-  }
   .main-content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
   }
+  
+  .float-left {
+    float: left;
+    margin-right: 25px;
+  }
+  
+  .float-right {
+    float: right;
+    margin-left: 25px;
+  }
   #About-Me,
   #Work,
   #Contact-Me,
-  #Resume {
+  #Resume.html {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
     font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
     background-color: #0072bb;
-    color: #445877;
+    color: #ffffff;
   }
   
-  #About-Me h1,
-  #Work h1,
+  #About-Me h1 h2 h3,
+  #Work h1 h2 h3,
   #Contact-Me h1,
   h2,
   h3 {
     margin-bottom: 20px;
     font-size: 36px;
   }
-  #Contact-Me ul 
-  {
+  #Contact-Me ul {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
