created resume link for html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,7 +115,7 @@
   #About-Me,
   #Work,
   #Contact-Me,
-  #Resume.html {
+  #Resume {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
