--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,9 +6,9 @@
   }
   
   body {
-    min-height: 500vh;
-    background: #eee;
-    margin: 0;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background: #eeeef7;
+    color: #415a7b;
   }
   
   nav a {
@@ -28,7 +28,7 @@
   p {
     font-size: 16px;
   }
-  
+  /* Header Style */
   .header {
     display: flex;
     justify-content: left;
@@ -40,7 +40,7 @@
     background-color: #30343e;
     color: #415a7b;
   }
-  
+   /* Header Image Style */
   .main-image 
   {
       position: relative;  
@@ -63,13 +63,33 @@
       border: none;
       font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     }
-  
-  .h1 {
-    padding: 60px;
-    text-align: center;
-    background: #1abc9c;
-    color: white;
+  /* Main Section Style */
+  main
+  {
+   display: flex;
+   flex-direction: column;
+   width: 60%;
+   margin: auto;
+   color: #eeeef7
+  }
+  section
+  {
+    display: flex;
+    margin-top: 30px;
+    margin-bottom: 30px
+  }
+  section h1 {
+    display: flex;
+    flex-direction: column;
     font-size: 30px;
+    width: 100px;
+    text-align: right;
+    align-items: flex-end;
+    padding-right: 15px;
+  }
+  section > div {
+    padding-left: 20px;
+    border-left: 5px solid #5d6e8a;
   }
   .header h2 h3 {
     display: inline-block;
