--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,3 @@
- 
- 
-
- 
 * {
   box-sizing: border-box;
   padding: 0;
@@ -44,28 +40,27 @@ p {
   color: #415a7b;
 }
 
-.main-image 
-{
-    position: relative;  
-    height: 200px;
-    width: 100%;
-    margin-bottom: 0px;
-    background-image: url("../images/header-image.png");
-    background-size: cover;
-    background-position: center;
+.main-image {
+  position: relative;
+  height: 200px;
+  width: 100%;
+  margin-bottom: 0px;
+  background-image: url("../images/header-image.png");
+  background-size: cover;
+  background-position: center;
 }
 
-.subtitle 
-{
-    position: absolute;
-    bottom: 10px;
-    background-color: #80c9cb;
-    right: 20px;
-    width: 200px;
-    height: 100px;
-    border: none;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  }
+.subtitle {
+  position: absolute;
+  bottom: 10px;
+  background-color: #80c9cb;
+  right: 20px;
+  width: 200px;
+  height: 100px;
+  border: none;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+}
 
 .h1 {
   padding: 60px;
@@ -100,58 +95,35 @@ p {
   text-decoration: underline;
 }
 
-main 
-{
-    display: flex;
-    flex-direction: column;
-    width: 70%;
-    margin: 0 auto;
-    color: #5d6e8a;
-  }
-  
-  section {
-    display: flex;
-    margin-top: 20px;
-    margin-bottom: 20px;
-  }
-  
-  section h1 {
-    display: flex;
-    flex-direction: column;
-    font-size: 4vw;
-    width: 100px;
-    text-align: right;
-    align-items: flex-end;
-    padding-right: 20px;
-  }
-  
-  section > div {
-    padding-left: 20px;
-    border-left: 5px solid #5d6e8a;
-  }
-  
-#about-me h2,
-#work h2,
-#contact-me h2,
-#resume {
+main {
+  display: flex;
+  flex-direction: column;
+  width: 70%;
+  margin: 0 auto;
+  color: #5d6e8a;
+}
+section h1 h2 {
+  display: flex;
+  flex-direction: column;
+  font-size: 4vw;
+  width: 100px;
+  text-align: right;
+  align-items: flex-end;
+  padding-right: 20px;
+  margin-top: 20px;
   margin-bottom: 20px;
   padding: 50px;
-  height: 300px;
-  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  height: 200px;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
   color: darkslategrey;
 }
 
-#about-me h1 h2 h3,
-#work h1 h2 h3,
-#contact-me h1,
-h2,
-h3 
-{ 
-  display: flex;
-  margin-bottom: 20px;
-  font-size: 36px;
-  flex-direction: column;
+section > div {
+  padding-left: 20px;
+  border-left: 5px solid #5d6e8a;
 }
+
 #contact-me ul {
   display: flex;
   flex-direction: row;
