--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,19 +62,20 @@ p {
     "Lucida Sans", Arial, sans-serif;
 }
 
-.header h1 h2{
+.h1 {
   padding: 60px;
   text-align: center;
   background: #1abc9c;
   color: white;
   font-size: 30px;
+}
+.header h2 h3 {
   display: inline-block;
   font-size: 48px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
   color: darkslategrey;
 }
-
 #header nav ul {
   padding-top: 15px;
   margin-right: 20px;
@@ -121,6 +122,7 @@ section h1 h2 {
 section > div {
   padding-left: 20px;
   border-left: 5px solid #5d6e8a;
+  margin-bottom: 30px;
 }
 
 #contact-me ul {
