--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,9 +83,14 @@ p {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 20px;
 }
+.h1{
+  display: flex;
+  justify-content: start;
+}
 
 .header nav ul {
-  display: inline-block;
+  display: flex;
+  -ms-flex-align: end;
   list-style-type: none;
 }
 
