--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,64 +3,104 @@
   padding: 0;
   margin: 0;
 }
-
-body {
-  min-height: 500vh;
-  background: #eee;
-  margin: 0;
+body 
+{
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  background-color: #eee;
+  color:darkslategray;
 }
-
-nav a {
-  float: right;
+/* Header Style Section */
+header
+{
   display: flex;
-  color: #80c9cb;
-  text-align: right;
-  padding: 14px 16px;
-  text-decoration: underline;
-  font-size: 17px;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
-  letter-spacing: 2px;
-  position: relative;
+  background-color: slategray;
+  height: 10px;
+  padding: 10px 20px 10px 0px;
 }
-
-p {
-  font-size: 16px;
-}
-
-.header {
+header .logo
+{
   display: flex;
-  justify-content: left;
-  width: 100%;
-  align-items: right;
-  padding: 20px;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
-  background-color: #30343e;
-  color: #415a7b;
+  flex-wrap: wrap;
+  align-content: center;
+  background-color: lightblue;
+  width: 50%;
+  height: 100%;
+  padding-right: 5%;
+}
+header .logo h1
+{
+  font-size: 2cm;
+  margin-left: 10px;
+}
+header nav ul 
+{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-content: center;
+  width:auto;
 }
 
-.main-image {
+header nav a
+{
+  color:lightblue;
+  margin:5px;
+}
+/* Header Image Style */
+.main-image 
+{
+  background-image: url("../images/header-image.png");
+  background-repeat: no-repeat;
   position: relative;
+  background-size: cover;
   height: 200px;
   width: 100%;
   margin-bottom: 0px;
-  background-image: url("../images/header-image.png");
-  background-size: cover;
-  background-position: center;
 }
 
-.subtitle {
-  position: absolute;
-  bottom: 10px;
+.subtitle
+{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content:center;
   background-color: #80c9cb;
+  bottom: 20px;
   right: 20px;
   width: 200px;
-  height: 100px;
-  border: none;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
+  padding: 5%;
 }
+.subtitle h1
+{
+  font-size: 20px;
+}
+/* Main Section Styling */
+main 
+{
+  display: flex;
+  flex-direction: column;
+  width: 70%;
+  margin: 0 auto;
+  color: slategray;
+}
+
+section h1 h2
+{
+  display: flex;
+  flex-direction: column;
+  font-size: 4vw;
+  width: 100px;
+  text-align: right;
+  align-items: flex-end;
+  padding-right: 20px;
+}
+
+section > div 
+{
+  padding-left: 20px;
+  border-left: 5px solid #5d6e8a;
+  margin-bottom: 30px;
+}
+/* Work Section */
 
 .h1 {
   padding: 60px;
@@ -76,13 +116,7 @@ p {
     "Lucida Sans", Arial, sans-serif;
   color: darkslategrey;
 }
-#header nav ul {
-  padding-top: 15px;
-  margin-right: 20px;
-  float: right;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  font-size: 20px;
-}
+
 .h1{
   display: flex;
   justify-content: start;
@@ -100,35 +134,7 @@ p {
   text-decoration: underline;
 }
 
-main {
-  display: flex;
-  flex-direction: column;
-  width: 70%;
-  margin: 0 auto;
-  color: #5d6e8a;
-}
-section h1 h2 {
-  display: flex;
-  flex-direction: column;
-  font-size: 4vw;
-  width: 100px;
-  text-align: right;
-  align-items: flex-end;
-  padding-right: 20px;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  padding: 50px;
-  height: 200px;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
-  color: darkslategrey;
-}
 
-section > div {
-  padding-left: 20px;
-  border-left: 5px solid #5d6e8a;
-  margin-bottom: 30px;
-}
 
 #contact-me ul {
   display: flex;
