edited html page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,22 +3,20 @@
   padding: 0;
   margin: 0;
 }
-body 
-{
-  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+body {
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
   background-color: #eee;
-  color:darkslategray;
+  color: darkslategray;
 }
 /* Header Style Section */
-header
-{
+header {
   display: flex;
   background-color: slategray;
   height: 10px;
   padding: 10px 20px 10px 0px;
 }
-header .logo
-{
+header .logo {
   display: flex;
   flex-wrap: wrap;
   align-content: center;
@@ -27,28 +25,24 @@ header .logo
   height: 100%;
   padding-right: 5%;
 }
-header .logo h1
-{
+header .logo h1 {
   font-size: 2cm;
   margin-left: 10px;
 }
-header nav ul 
-{
+header nav ul {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-content: center;
-  width:auto;
+  width: auto;
 }
 
-header nav a
-{
-  color:lightblue;
-  margin:5px;
+header nav a {
+  color: lightblue;
+  margin: 5px;
 }
 /* Header Image Style */
-.main-image 
-{
+.main-image {
   background-image: url("../images/header-image.png");
   background-repeat: no-repeat;
   position: relative;
@@ -58,23 +52,21 @@ header nav a
   margin-bottom: 0px;
 }
 
-.subtitle
-{
+.subtitle {
   display: flex;
   flex-wrap: wrap;
-  justify-content:center;
+  justify-content: center;
   background-color: #80c9cb;
   bottom: 20px;
   right: 20px;
   width: 200px;
   padding: 5%;
 }
-.subtitle h1
-{
+.subtitle h1 {
   font-size: 20px;
 }
 /* Main Section Styling */
-main 
+main
 {
   display: flex;
   flex-direction: column;
@@ -83,7 +75,7 @@ main
   color: slategray;
 }
 
-section h1 h2
+section h1
 {
   display: flex;
   flex-direction: column;
@@ -100,6 +92,88 @@ section > div
   border-left: 5px solid #5d6e8a;
   margin-bottom: 30px;
 }
+/* About Section */
+#about-me div img
+{
+  float: right;
+  margin-left: 5px;
+  margin-bottom: 5px;
+}
+
+/* Work Section */
+#work div 
+{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  max-width: 90%;
+}
+
+.work-link-feature {
+  width: 100%;
+  position: relative;
+}
+
+.work-link {
+  width: 49%;
+  margin-bottom: 10px;
+  position: relative;
+}
+
+.work-img:hover {
+  filter: brightness(100%);
+}
+
+.work-img {
+  border: 5px solid #92cbcd;
+  height: auto;
+  width: 100%;
+  filter: brightness(75%);
+}
+
+.work-subtitle {
+  position: absolute;
+  left: 0;
+  bottom: 10%;
+  color: #92cbcd;
+  background-color: #31343d;
+  text-decoration: none;
+  padding: 20px;
+}
+
+.work-subtitle h3 {
+  font-size: 2vw;
+}
+
+.feature {
+  width: 100%;
+}
+
+/* Contact Section */
+
+* Contact Me Section */ #contact-me ul {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-evenly;
+  list-style: none;
+}
+
+#contact-me div a {
+  color: #5d6e8a;
+  margin: 5px;
+  padding: 5px;
+  font-size: 2vw;
+  text-decoration: none;
+  border-bottom: 5px solid #5d6e8a;
+  transition: all 0.3s ease-in;
+}
+
+#contact-me div a:hover {
+  color: #92cbcd;
+  background-color: #5d6e8a;
+}
+
 /* Work Section */
 
 .h1 {
@@ -117,7 +191,7 @@ section > div
   color: darkslategrey;
 }
 
-.h1{
+.h1 {
   display: flex;
   justify-content: start;
 }
@@ -133,8 +207,6 @@ section > div
   margin-left: 25px;
   text-decoration: underline;
 }
-
-
 
 #contact-me ul {
   display: flex;
