--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ header
 {
   display: flex;
   background-color: slategray;
-  height: 10px;
+  height: 60px;
   padding: 10px 20px 10px 0px;
 }
 header .logo 
@@ -30,16 +30,17 @@ header .logo
 }
 header .logo h1 
 {
-  font-size: 2cm;
-  margin-left: 10px;
+  font-size:10em;
+  margin-left: auto;
 }
 header nav
 {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-content: center;
-  width: auto;
+  width: 50%;
+  margin-left:auto;
 }
 
 header nav a
@@ -52,24 +53,24 @@ header nav a
 {
   background-image: url("../images/header-image.png");
   background-repeat: no-repeat;
-  position: relative;
   background-size: cover;
+  position: relative;
   height: 200px;
-  width: 100%;
-  margin-bottom: 0px;
 }
 
-.subtitle {
+.subtitle
+{
   display: flex;
-  flex-wrap: wrap;
+  position: absolute;
   justify-content: center;
   background-color: #80c9cb;
+  width:40%;
   bottom: 20px;
   right: 20px;
-  width: 200px;
-  padding: 5%;
+  padding: 1%;
 }
-.subtitle h1 {
+.subtitle h1
+{
   font-size: 20px;
 }
 /* Main Section Styling */
@@ -163,9 +164,10 @@ section > div
   width: 100%;
 }
 
-/* Contact Section */
+/* Contact Me Section */
 
-* Contact Me Section */ #contact-me ul {
+#contact-me ul
+{
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
@@ -173,7 +175,8 @@ section > div
   list-style: none;
 }
 
-#contact-me div a {
+#contact-me div a
+{
   color: #5d6e8a;
   margin: 5px;
   padding: 5px;
@@ -183,21 +186,24 @@ section > div
   transition: all 0.3s ease-in;
 }
 
-#contact-me div a:hover {
+#contact-me div a:hover
+{
   color: #92cbcd;
   background-color: #5d6e8a;
 }
 
 /* Work Section */
 
-.h1 {
+#h1 
+{
   padding: 60px;
   text-align: center;
   background: #1abc9c;
   color: white;
   font-size: 30px;
 }
-.header h2 h3 {
+.header h2 h3
+{
   display: inline-block;
   font-size: 48px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
@@ -205,7 +211,8 @@ section > div
   color: darkslategrey;
 }
 
-.h1 {
+.h1
+{
   display: flex;
   justify-content: start;
 }
@@ -216,15 +223,9 @@ section > div
   list-style-type: none;
 }
 
-.header nav ul li {
+.header nav ul li
+{
   display: inline-block;
   margin-left: 25px;
   text-decoration: underline;
-}
-
-#contact-me ul {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  list-style: none;
 }
