--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,8 +82,16 @@ main
   margin: 0 auto;
   color: slategray;
 }
+section 
+{
+  display: flex;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
 
-section h1
+section h1,
+#work h1,
+#contact-me h1
 {
   display: flex;
   flex-direction: column;
@@ -98,14 +106,6 @@ section > div
 {
   padding-left: 20px;
   border-left: 5px solid #5d6e8a;
-  margin-bottom: 30px;
-}
-/* About Section */
-#about-me div img
-{
-  float: right;
-  margin-left: 5px;
-  margin-bottom: 5px;
 }
 
 /* Work Section */
