--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ header
 {
   display: flex;
   background-color: slategray;
-  height: 60px;
+  height: 80px;
   padding: 10px 20px 10px 0px;
 }
 header .logo 
@@ -23,29 +23,28 @@ header .logo
   display: flex;
   flex-wrap: wrap;
   align-content: center;
-  background-color: lightblue;
+  background-color: #92CCCE;
   width: 50%;
   height: 100%;
   padding-right: 5%;
 }
 header .logo h1 
 {
-  font-size:10em;
-  margin-left: auto;
+  font-size: 2cm;
+  margin-left: 10px;
 }
 header nav
 {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-content: center;
-  width: 50%;
-  margin-left:auto;
+  width: auto;
 }
 
 header nav a
 {
-  color: lightblue;
+  color: #92CCCE;
   margin: 5px;
 }
 /* Header Image Style */
@@ -53,24 +52,24 @@ header nav a
 {
   background-image: url("../images/header-image.png");
   background-repeat: no-repeat;
-  background-size: cover;
   position: relative;
+  background-size: cover;
   height: 200px;
+  width: 100%;
+  margin-bottom: 0px;
 }
 
-.subtitle
-{
+.subtitle {    
   display: flex;
   position: absolute;
+  flex-wrap: wrap;
   justify-content: center;
-  background-color: #80c9cb;
-  width:40%;
-  bottom: 20px;
-  right: 20px;
-  padding: 1%;
+  background-color: #92CCCE;
+  top: 120px;
+  right: 50px;
+  width: 150px;
 }
-.subtitle h1
-{
+.subtitle h1 {
   font-size: 20px;
 }
 /* Main Section Styling */
@@ -82,16 +81,15 @@ main
   margin: 0 auto;
   color: slategray;
 }
-section 
+section
 {
-  display: flex;
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
+    display: flex;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
 
-section h1,
-#work h1,
-#contact-me h1
+
+section h1
 {
   display: flex;
   flex-direction: column;
@@ -106,6 +104,14 @@ section > div
 {
   padding-left: 20px;
   border-left: 5px solid #5d6e8a;
+  margin-bottom: 30px;
+}
+/* About Section */
+#about-me div img
+{
+  float: right;
+  margin-left: 5px;
+  margin-bottom: 5px;
 }
 
 /* Work Section */
@@ -148,8 +154,8 @@ section > div
   position: absolute;
   left: 0;
   bottom: 10%;
-  color: #92cbcd;
-  background-color: #31343d;
+  color: #31343D;
+  background-color: #92CCCE;
   text-decoration: none;
   padding: 20px;
 }
@@ -164,10 +170,9 @@ section > div
   width: 100%;
 }
 
-/* Contact Me Section */
+/* Contact Section */
 
-#contact-me ul
-{
+* Contact Me Section */ #contact-me ul {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
@@ -175,8 +180,7 @@ section > div
   list-style: none;
 }
 
-#contact-me div a
-{
+#contact-me div a {
   color: #5d6e8a;
   margin: 5px;
   padding: 5px;
@@ -186,24 +190,21 @@ section > div
   transition: all 0.3s ease-in;
 }
 
-#contact-me div a:hover
-{
+#contact-me div a:hover {
   color: #92cbcd;
   background-color: #5d6e8a;
 }
 
 /* Work Section */
 
-#h1 
-{
+.h1 {
   padding: 60px;
   text-align: center;
   background: #1abc9c;
   color: white;
   font-size: 30px;
 }
-.header h2 h3
-{
+.header h2 h3 {
   display: inline-block;
   font-size: 48px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
@@ -211,8 +212,7 @@ section > div
   color: darkslategrey;
 }
 
-.h1
-{
+.h1 {
   display: flex;
   justify-content: start;
 }
@@ -223,9 +223,15 @@ section > div
   list-style-type: none;
 }
 
-.header nav ul li
-{
+.header nav ul li {
   display: inline-block;
   margin-left: 25px;
   text-decoration: underline;
+}
+
+#contact-me ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  list-style: none;
 }
