fixed contact me section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,53 +3,47 @@
   padding: 0;
   margin: 0;
 }
-body 
-{
+body {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
   background-color: #eee;
   color: darkslategray;
 }
 /* Header Style Section */
-header 
-{
+header {
   display: flex;
   background-color: slategray;
   height: 80px;
   padding: 10px 20px 10px 0px;
 }
-header .logo 
-{
+header .logo {
   display: flex;
   flex-wrap: wrap;
   align-content: center;
-  background-color: #92CCCE;
+  background-color: #92ccce;
   width: 50%;
   height: 100%;
   padding-right: 5%;
 }
-header .logo h1 
-{
+header .logo h1 {
   font-size: 2cm;
   margin-left: 10px;
 }
-header nav
-{
+header nav {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-content: center;
-  width: auto;
+  width: 40%;
+  margin-left: auto;
 }
 
-header nav a
-{
-  color: #92CCCE;
+header nav a {
+  color: #92ccce;
   margin: 5px;
 }
 /* Header Image Style */
-.main-image 
-{
+.main-image {
   background-image: url("../images/header-image.png");
   background-repeat: no-repeat;
   position: relative;
@@ -59,12 +53,12 @@ header nav a
   margin-bottom: 0px;
 }
 
-.subtitle {    
+.subtitle {
   display: flex;
   position: absolute;
   flex-wrap: wrap;
   justify-content: center;
-  background-color: #92CCCE;
+  background-color: #92ccce;
   top: 120px;
   right: 50px;
   width: 150px;
@@ -73,24 +67,20 @@ header nav a
   font-size: 20px;
 }
 /* Main Section Styling */
-main
-{
+main {
   display: flex;
   flex-direction: column;
   width: 70%;
   margin: 0 auto;
   color: slategray;
 }
-section
-{
-    display: flex;
-    margin-top: 20px;
-    margin-bottom: 20px;
-  }
+section {
+  display: flex;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
 
-
-section h1
-{
+section h1 {
   display: flex;
   flex-direction: column;
   font-size: 4vw;
@@ -100,101 +90,89 @@ section h1
   padding-right: 20px;
 }
 
-section > div 
-{
+section > div {
   padding-left: 20px;
   border-left: 5px solid #5d6e8a;
   margin-bottom: 30px;
 }
 /* About Section */
-#about-me div img
-{
+#about-me div img {
   float: right;
   margin-left: 5px;
   margin-bottom: 5px;
 }
 
 /* Work Section */
-#work div 
-{
+#work div {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   max-width: 90%;
 }
 
-.work-main-class
-{
+.work-main-class {
   width: 100%;
   position: relative;
 }
 
-.work-link
-{
+.work-link {
   width: 49%;
   margin-bottom: 10px;
   position: relative;
 }
 
-.work-img:hover
-{
+.work-img:hover {
   filter: brightness(100%);
 }
 
-.work-img
-{
+.work-img {
   border: 5px solid #92cbcd;
   height: auto;
   width: 100%;
   filter: brightness(75%);
 }
 
-.work-subtitle
-{
+.work-subtitle {
   position: absolute;
   left: 0;
   bottom: 10%;
-  color: #31343D;
-  background-color: #92CCCE;
+  color: #31343d;
+  background-color: #92ccce;
   text-decoration: none;
   padding: 20px;
 }
 
-.work-subtitle h3
-{
+.work-subtitle h3 {
   font-size: 2vw;
 }
 
-.feature
-{
+.feature {
   width: 100%;
 }
 
-/* Contact Section */
-
-* Contact Me Section */ #contact-me ul {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  justify-content: space-evenly;
-  list-style: none;
-}
-
-#contact-me div a {
-  color: #5d6e8a;
-  margin: 5px;
-  padding: 5px;
-  font-size: 2vw;
-  text-decoration: none;
-  border-bottom: 5px solid #5d6e8a;
-  transition: all 0.3s ease-in;
-}
-
-#contact-me div a:hover {
-  color: #92cbcd;
-  background-color: #5d6e8a;
-}
-
+/* Contact Section */ #contact-me div {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-content: center;
+    width: 100%;
+  }
+  
+  #contact-me div a {
+    color: #5d6e8a;
+    margin: 5px;
+    padding: 5px;
+    font-size: 2vw;
+    text-decoration: none;
+    border-bottom: 5px solid #5d6e8a;
+    transition: all 0.3s ease-in;
+  }
+  
+  #contact-me div a:hover {
+    color: #92cbcd;
+    background-color: #5d6e8a;
+  }
+  
 /* Work Section */
 
 .h1 {
@@ -227,11 +205,4 @@ section > div
   display: inline-block;
   margin-left: 25px;
   text-decoration: underline;
-}
-
-#contact-me ul {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  list-style: none;
 }
