--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,7 @@ header .logo h1 {
 header nav {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-content: center;
   width: 40%;
   margin-left: auto;
